# miniapp_backend

./: .gitignore  README.md  migrate.py  pyproject.toml  student.db
app/: main.py
app/api/: admin.py  comment.py  grade.py  player.py  resources.py  songs.py  wall.py  wechat.py
app/core/: config.py  security.py
app/db/models/: __init__.py  grade.py  song_request.py  user.py  wall.py
app/db/repositories/: __init__.py  comment.py  grade.py  song_request.py  user.py  wall.py
app/middleware/: security.py
app/schemas/: auth.py  comment.py  grade.py  user.py  wall.py
app/services/: config_manager.py  sanitizer.py
app/static_admin/: index.html  panel.js  styles.css
